Added appropriate documentation for the project.